--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,15 @@ RABBITMQ_DEFAULT_PASS=rubia_password
 
 # Spring Boot Configuration
 SPRING_PROFILES_ACTIVE=docker
+
+# Database Configuration (for Spring Boot)
+DATABASE_URL=jdbc:postgresql://localhost:5432/rubia_chat
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=postgres
+
+# Twilio Configuration
+MESSAGING_PROVIDER=twilio
+TWILIO_ACCOUNT_SID=your_account_sid_here
+TWILIO_AUTH_TOKEN=your_auth_token_here
+TWILIO_PHONE_NUMBER=whatsapp:+5511999999999
+TWILIO_API_URL=https://api.twilio.com
