--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -2,15 +2,15 @@ name: Backend Build
 
 on:
   pull_request:
-    branches: [ main, develop ]
+    branches: [master]
     paths:
-      - 'api/**'
-      - '.github/workflows/backend-build.yml'
+      - "api/**"
+      - ".github/workflows/backend-build.yml"
   push:
-    branches: [ main, develop ]
+    branches: [master]
     paths:
-      - 'api/**'
-      - '.github/workflows/backend-build.yml'
+      - "api/**"
+      - ".github/workflows/backend-build.yml"
 
 defaults:
   run:
@@ -22,31 +22,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: "21"
+          distribution: "temurin"
 
-    - name: Cache Maven dependencies
-      uses: actions/cache@v4
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
+      - name: Cache Maven dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
 
-    - name: Compile application
-      run: ./mvnw clean compile
+      - name: Compile application
+        run: ./mvnw clean compile
 
-    - name: Package application
-      run: ./mvnw package -DskipTests
+      - name: Package application
+        run: ./mvnw package -DskipTests
 
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: build-artifacts
-        path: api/target/*.jar
-        retention-days: 7
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifacts
+          path: api/target/*.jar
+          retention-days: 7
