--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -2,15 +2,15 @@ name: Backend Tests
 
 on:
   pull_request:
-    branches: [ main, develop ]
+    branches: [master]
     paths:
-      - 'api/**'
-      - '.github/workflows/backend-tests.yml'
+      - "api/**"
+      - ".github/workflows/backend-tests.yml"
   push:
-    branches: [ main, develop ]
+    branches: [master]
     paths:
-      - 'api/**'
-      - '.github/workflows/backend-tests.yml'
+      - "api/**"
+      - ".github/workflows/backend-tests.yml"
 
 defaults:
   run:
@@ -20,7 +20,7 @@ jobs:
   test:
     name: Run Unit and Integration Tests
     runs-on: ubuntu-latest
-    
+
     services:
       postgres:
         image: postgres:13.3
@@ -37,55 +37,55 @@ jobs:
           - 5432:5432
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: "21"
+          distribution: "temurin"
 
-    - name: Cache Maven dependencies
-      uses: actions/cache@v4
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
+      - name: Cache Maven dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
 
-    - name: Wait for PostgreSQL
-      run: |
-        until pg_isready -h localhost -p 5432 -U testuser; do
-          echo "Waiting for PostgreSQL..."
-          sleep 2
-        done
+      - name: Wait for PostgreSQL
+        run: |
+          until pg_isready -h localhost -p 5432 -U testuser; do
+            echo "Waiting for PostgreSQL..."
+            sleep 2
+          done
 
-    - name: Run tests
-      run: ./mvnw clean test
-      env:
-        SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/testdb
-        SPRING_DATASOURCE_USERNAME: testuser
-        SPRING_DATASOURCE_PASSWORD: testpassword
-        SPRING_JPA_HIBERNATE_DDL_AUTO: validate
-        SPRING_FLYWAY_ENABLED: true
+      - name: Run tests
+        run: ./mvnw clean test
+        env:
+          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/testdb
+          SPRING_DATASOURCE_USERNAME: testuser
+          SPRING_DATASOURCE_PASSWORD: testpassword
+          SPRING_JPA_HIBERNATE_DDL_AUTO: validate
+          SPRING_FLYWAY_ENABLED: true
 
-    - name: Generate Test Report
-      uses: dorny/test-reporter@v1
-      if: success() || failure()
-      with:
-        name: Maven Tests
-        path: api/target/surefire-reports/*.xml
-        reporter: java-junit
-        fail-on-error: true
+      - name: Generate Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: Maven Tests
+          path: api/target/surefire-reports/*.xml
+          reporter: java-junit
+          fail-on-error: true
 
-    - name: Upload test results
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: test-results
-        path: |
-          api/target/surefire-reports/
-          api/target/site/jacoco/
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-results
+          path: |
+            api/target/surefire-reports/
+            api/target/site/jacoco/
 
   # Job para verificar se todos os testes passaram
   test-status:
@@ -94,11 +94,11 @@ jobs:
     needs: test
     if: always()
     steps:
-    - name: Check test results
-      run: |
-        if [ "${{ needs.test.result }}" != "success" ]; then
-          echo "❌ Tests failed! PR cannot be merged."
-          exit 1
-        else
-          echo "✅ All tests passed! PR is ready for review."
-        fi
+      - name: Check test results
+        run: |
+          if [ "${{ needs.test.result }}" != "success" ]; then
+            echo "❌ Tests failed! PR cannot be merged."
+            exit 1
+          else
+            echo "✅ All tests passed! PR is ready for review."
+          fi
