--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -2,15 +2,15 @@ name: Code Quality
 
 on:
   pull_request:
-    branches: [ main, develop ]
+    branches: [master]
     paths:
-      - 'api/**'
-      - '.github/workflows/code-quality.yml'
+      - "api/**"
+      - ".github/workflows/code-quality.yml"
   push:
-    branches: [ main, develop ]
+    branches: [master]
     paths:
-      - 'api/**'
-      - '.github/workflows/code-quality.yml'
+      - "api/**"
+      - ".github/workflows/code-quality.yml"
 
 defaults:
   run:
@@ -20,7 +20,7 @@ jobs:
   code-quality:
     name: Code Quality Checks
     runs-on: ubuntu-latest
-    
+
     services:
       postgres:
         image: postgres:13.3
@@ -37,60 +37,60 @@ jobs:
           - 5432:5432
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: "21"
+          distribution: "temurin"
 
-    - name: Cache Maven dependencies
-      uses: actions/cache@v4
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
+      - name: Cache Maven dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
 
-    - name: Wait for PostgreSQL
-      run: |
-        until pg_isready -h localhost -p 5432 -U testuser; do
-          echo "Waiting for PostgreSQL..."
-          sleep 2
-        done
+      - name: Wait for PostgreSQL
+        run: |
+          until pg_isready -h localhost -p 5432 -U testuser; do
+            echo "Waiting for PostgreSQL..."
+            sleep 2
+          done
 
-    - name: Run tests with coverage
-      run: ./mvnw clean test jacoco:report
-      env:
-        SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/testdb
-        SPRING_DATASOURCE_USERNAME: testuser
-        SPRING_DATASOURCE_PASSWORD: testpassword
-        SPRING_JPA_HIBERNATE_DDL_AUTO: validate
-        SPRING_FLYWAY_ENABLED: true
+      - name: Run tests with coverage
+        run: ./mvnw clean test jacoco:report
+        env:
+          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/testdb
+          SPRING_DATASOURCE_USERNAME: testuser
+          SPRING_DATASOURCE_PASSWORD: testpassword
+          SPRING_JPA_HIBERNATE_DDL_AUTO: validate
+          SPRING_FLYWAY_ENABLED: true
 
-    - name: Generate coverage report
-      id: jacoco
-      uses: madrapps/jacoco-report@v1.6.1
-      with:
-        paths: |
-          ${{ github.workspace }}/api/target/site/jacoco/jacoco.xml
-        token: ${{ secrets.GITHUB_TOKEN }}
-        min-coverage-overall: 70
-        min-coverage-changed-files: 80
-        title: Code Coverage Report
-        update-comment: true
+      - name: Generate coverage report
+        id: jacoco
+        uses: madrapps/jacoco-report@v1.6.1
+        with:
+          paths: |
+            ${{ github.workspace }}/api/target/site/jacoco/jacoco.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 70
+          min-coverage-changed-files: 80
+          title: Code Coverage Report
+          update-comment: true
 
-    - name: Check coverage thresholds
-      run: |
-        echo "Coverage check completed"
-        echo "Minimum overall coverage: 70%"
-        echo "Minimum changed files coverage: 80%"
+      - name: Check coverage thresholds
+        run: |
+          echo "Coverage check completed"
+          echo "Minimum overall coverage: 70%"
+          echo "Minimum changed files coverage: 80%"
 
-    - name: Upload coverage reports
-      uses: actions/upload-artifact@v4
-      with:
-        name: coverage-reports
-        path: |
-          api/target/site/jacoco/
-        retention-days: 30
+      - name: Upload coverage reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-reports
+          path: |
+            api/target/site/jacoco/
+          retention-days: 30
