--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -101,6 +101,12 @@ ai.default-temperature=${AI_DEFAULT_TEMPERATURE:0.7}
 ai.default-max-tokens=${AI_DEFAULT_MAX_TOKENS:150}
 ai.cost-optimization.enabled=${AI_COST_OPTIMIZATION_ENABLED:true}
 
+# Spring AI OpenAI Configuration
+spring.ai.openai.api-key=${OPENAI_API_KEY:your-openai-api-key-here}
+spring.ai.openai.chat.options.model=${AI_DEFAULT_MODEL:gpt-4o-mini}
+spring.ai.openai.chat.options.temperature=${AI_DEFAULT_TEMPERATURE:0.7}
+spring.ai.openai.chat.options.max-tokens=${AI_DEFAULT_MAX_TOKENS:150}
+
 # AI Model Preferences (in order of preference for template enhancement)
 # 1. gpt-4o-mini: Best cost/quality ratio for marketing copy
 # 2. gpt-4o: Premium quality for special campaigns  
