--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.application.name=Rubia Chat Server
 server.port=${SERVER_PORT:8080}
 
 # Database Configuration
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/rubia_chat}
-spring.datasource.username=${DATABASE_USERNAME:postgres}
-spring.datasource.password=${DATABASE_PASSWORD:postgres}
+spring.datasource.url=${DB_URL}
+
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
@@ -17,16 +18,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=${SPRING_JPA_PROPERTIES_HIBERNATE_JDBC_TIME_ZONE:UTC}
 
 # Flyway Configuration
+spring.flyway.url=${DB_URL}
+spring.flyway.user=${DB_USERNAME}
+spring.flyway.password=${DB_PASSWORD}
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
-spring.flyway.baseline-on-migrate=true
+logging.level.org.flywaydb=DEBUG
+logging.level.com.zaxxer.hikari=DEBUG
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET:mySecretKey123456789012345678901234567890}
-jwt.expiration=${JWT_EXPIRATION:86400000}
-
-# Multi-tenant Configuration
-company.domain=${COMPANY_DOMAIN:rubia.localhost}
+jwt.expiration=${JWT_EXPIRATION:604800000}
 
 # CORS Configuration
 cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://rubia.localhost:3000,https://7e8749e54dd0.ngrok-free.app,https://api.z-api.io}
@@ -36,25 +38,12 @@ spring.data.redis.port=${REDIS_PORT:6379}
 spring.data.redis.password=${REDIS_PASSWORD:}
 spring.data.redis.database=${REDIS_DATABASE:0}
 
-# RabbitMQ Configuration (uncomment to enable)
-# spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
-# spring.rabbitmq.port=${RABBITMQ_PORT:5672}
-# spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
-# spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
-# spring.rabbitmq.virtual-host=${RABBITMQ_VIRTUAL_HOST:/}
 
 # Messaging Configuration (global provider, per-user phone numbers)
 messaging.provider=${MESSAGING_PROVIDER:zapi}
 
-# WhatsApp Provider Configuration (shared across all companies)
-whatsapp.provider.account-id=${WHATSAPP_ACCOUNT_ID:your_account_id}
-whatsapp.provider.auth-token=${WHATSAPP_AUTH_TOKEN:your_auth_token}
-whatsapp.provider.phone-number=${WHATSAPP_PHONE_NUMBER:+5511999999999}
-whatsapp.provider.api-url=${WHATSAPP_API_URL:https://api.twilio.com}
-
 # Z-API Configuration
 zapi.clientToken=${CLIENT_TOKEN}
-zapi.webhook.token=${ZAPI_WEBHOOK_TOKEN:}
 zapi.media.max-file-size=${ZAPI_MEDIA_MAX_FILE_SIZE:20971520}
 zapi.media.allowed-types=${ZAPI_MEDIA_ALLOWED_TYPES:image/jpeg,image/png,application/pdf,video/mp4,audio/mpeg}
 
@@ -63,6 +52,7 @@ z-api.base-url=${Z_API_BASE_URL:https://api.z-api.io}
 z-api.connection-monitor.enabled=${Z_API_CONNECTION_MONITOR_ENABLED:true}
 z-api.connection-monitor.check-interval=${Z_API_CONNECTION_MONITOR_CHECK_INTERVAL:120000}
 z-api.webhook.base-url=${Z_API_WEBHOOK_BASE_URL:https://your-domain.com}
+zapi.webhook.token=${ZAPI_WEBHOOK_TOKEN:}
 
 # Security Configuration
 security.require-ssl=${SECURITY_REQUIRE_SSL:false}
@@ -106,19 +96,27 @@ campaign.messaging.randomize-order=${CAMPAIGN_MESSAGING_RANDOMIZE_ORDER:true}
 campaign.queue.provider=${CAMPAIGN_QUEUE_PROVIDER:redis}
 
 # AI Configuration - Optimized for Blood Donation Templates
+spring.ai.openai.api-key=${OPENAI_API_KEY:your-openai-api-key-here}
 ai.default-model=${AI_DEFAULT_MODEL:gpt-4o-mini}
 ai.default-temperature=${AI_DEFAULT_TEMPERATURE:0.7}
 ai.default-max-tokens=${AI_DEFAULT_MAX_TOKENS:150}
-ai.cost-optimization.enabled=${AI_COST_OPTIMIZATION_ENABLED:true}
 
-# Spring AI OpenAI Configuration
-spring.ai.openai.api-key=${OPENAI_API_KEY:your-openai-api-key-here}
-spring.ai.openai.chat.options.model=${AI_DEFAULT_MODEL:gpt-4o-mini}
-spring.ai.openai.chat.options.temperature=${AI_DEFAULT_TEMPERATURE:0.7}
-spring.ai.openai.chat.options.max-tokens=${AI_DEFAULT_MAX_TOKENS:150}
+# Spring Boot Autoconfigure (disable RabbitMQ for now)
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
 
-# AI Model Preferences (in order of preference for template enhancement)
-# 1. gpt-4o-mini: Best cost/quality ratio for marketing copy
-# 2. gpt-4o: Premium quality for special campaigns  
-# 3. o3: Scientific/medical reasoning for complex cases
+# Multi-tenant Configuration
+company.domain=${COMPANY_DOMAIN:}
+
+# WhatsApp Provider Configuration
+whatsapp.provider.account-id=${WHATSAPP_ACCOUNT_ID:}
+whatsapp.provider.auth-token=${WHATSAPP_AUTH_TOKEN:}
+whatsapp.provider.phone-number=${WHATSAPP_PHONE_NUMBER:}
+whatsapp.provider.api-url=${WHATSAPP_API_URL:}
+
+# Z-API Extended Configuration
+zapi.timeouts.connection=${ZAPI_CONNECTION_TIMEOUT:30000}
+zapi.timeouts.read=${ZAPI_READ_TIMEOUT:60000}
+zapi.retry.max-attempts=${ZAPI_RETRY_MAX_ATTEMPTS:3}
+zapi.retry.backoff-delay=${ZAPI_RETRY_BACKOFF_DELAY:1000}
+
 
