--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,18 @@ services:
     image: postgres:16-alpine
     container_name: rubia-postgres
     environment:
-      POSTGRES_USER: ${DB_USERNAME:-postgres}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-password}
-      POSTGRES_DB: ${DB_NAME:-rubia_password}
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     ports:
-      - "5432:5432"
+      - "${PG_PORT:-5432}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./postgres-init:/docker-entrypoint-initdb.d
     networks:
       - rubia-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U rubia_user -d rubia"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME} -d ${DB_NAME}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -44,16 +44,16 @@ services:
     image: redis:7-alpine
     container_name: rubia-redis
     environment:
-      REDIS_PASSWORD: ${REDIS_PASSWORD:-redis_password}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
     networks:
       - rubia-network
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-redis_password}
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
     healthcheck:
-      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-redis_password}", "ping"]
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -85,28 +85,45 @@ services:
       dockerfile: Dockerfile
     container_name: rubia-api
     environment:
-      SPRING_PROFILES_ACTIVE: docker
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/rubia
-      SPRING_DATASOURCE_USERNAME: rubia_user
-      SPRING_DATASOURCE_PASSWORD: rubia_password
-      SPRING_REDIS_HOST: redis
-      SPRING_REDIS_PORT: 6379
-      SPRING_REDIS_PASSWORD: ${REDIS_PASSWORD:-redis_password}
-      SPRING_REDIS_DATABASE: ${REDIS_DATABASE:-0}
-      SPRING_RABBITMQ_HOST: rabbitmq
-      SPRING_RABBITMQ_PORT: 5672
-      SPRING_RABBITMQ_USERNAME: rubia_user
-      SPRING_RABBITMQ_PASSWORD: rubia_password
+      DB_URL: ${DB_URL}
+      DB_NAME: ${DB_NAME}
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      SERVER_PORT: ${SERVER_PORT}
+
+      JPA_SHOW_SQL: ${JPA_SHOW_SQL}
+
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_EXPIRATION: ${JWT_EXPIRATION}
+
+      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS}
+
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+      REDIS_DATABASE: ${REDIS_DATABASE}
+      CAMPAIGN_QUEUE_PROVIDER: ${CAMPAIGN_QUEUE_PROVIDER}
+
+      MESSAGING_PROVIDER: ${MESSAGING_PROVIDER}
+      Z_API_WEBHOOK_BASE_URL: ${Z_API_WEBHOOK_BASE_URL}
+      CLIENT_TOKEN: ${CLIENT_TOKEN}
+      ZAPI_WEBHOOK_TOKEN: ${ZAPI_WEBHOOK_TOKEN}
+
+      SECURITY_REQUIRE_SSL: ${SECURITY_REQUIRE_SSL}
+
+      AI_DEFAULT_MODEL: ${AI_DEFAULT_MODEL}
+      AI_DEFAULT_TEMPERATURE: ${AI_DEFAULT_TEMPERATURE}
+      AI_DEFAULT_MAX_TOKENS: ${AI_DEFAULT_MAX_TOKENS}
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
     ports:
-      - "8080:8080"
+      - "8081:8081"
     networks:
       - rubia-network
     depends_on:
       postgres:
         condition: service_healthy
       redis:
-        condition: service_healthy
-      rabbitmq:
         condition: service_healthy
     restart: unless-stopped
 
