--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=Rubia Chat Server
 server.port=${SERVER_PORT:8080}
 
 # Database Configuration
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/rubia_chat}
-spring.datasource.username=${DATABASE_USERNAME:postgres}
-spring.datasource.password=${DATABASE_PASSWORD:postgres}
+spring.datasource.url=jdbc:${DATABASE_URL}
+spring.datasource.username=${PGUSER:postgres}
+spring.datasource.password=${PGPASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
@@ -17,6 +17,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=${SPRING_JPA_PROPERTIES_HIBERNATE_JDBC_TIME_ZONE:UTC}
 
 # Flyway Configuration
+spring.flyway.url=jdbc:${DATABASE_URL}
+spring.flyway.user=${PGUSER}
+spring.flyway.password=${PGPASSWORD}
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
