atualiza a configuração da URL do banco de dados e do Flyway para usar variáveis de ambiente específicas

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 
 # Database Configuration
-spring.datasource.url=jdbc:${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -26,7 +26,7 @@ spring.data.redis.password=${REDISPASSWORD}
 spring.data.redis.database=0
 
 # Flyway Configuration
-spring.flyway.url=jdbc:${DATABASE_URL}
+spring.flyway.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.flyway.user=${PGUSER}
 spring.flyway.password=${PGPASSWORD}
 spring.flyway.enabled=true
