adiciona configuração do endereço do servidor

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=Rubia Chat Server
 
 # Server Configuration
+server.address=0.0.0.0
 server.tomcat.threads.max=200
 server.tomcat.connection-timeout=20000
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
