atualiza configuração do Flyway para usar credenciais fixas e adiciona script de migração para corrigir restrição de telefone do WhatsApp

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -16,7 +16,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 
@@ -61,7 +60,7 @@ z-api.base-url=https://api.z-api.io
 z-api.connection-monitor.enabled=true
 z-api.connection-monitor.check-interval=120000
 z-api.webhook.base-url=${Z_API_WEBHOOK_BASE_URL:https://your-domain.com}
-zapi.webhook.token=${ZAPI_WEBHOOK_TOKEN}
+zapi.webhook.token=${ZAPI_WEBHOOK_TOKEN:token}
 
 # Security Configuration
 security.require-ssl=${SECURITY_REQUIRE_SSL:false}
