adiciona configuração do HikariCP e altera ddl-auto para validate

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -12,8 +12,16 @@ spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# HikariCP Configuration for Railway
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.leak-detection-threshold=60000
+
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
