adiciona configuração de timeout para Redis e ajusta validação no Flyway

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=Rubia Chat Server
 
 # Server Configuration
+server.port=${PORT:8080}
 server.address=0.0.0.0
 server.tomcat.threads.max=200
 server.tomcat.connection-timeout=20000
@@ -31,6 +32,8 @@ spring.data.redis.host=${REDISHOST}
 spring.data.redis.port=${REDISPORT}
 spring.data.redis.password=${REDISPASSWORD}
 spring.data.redis.database=0
+spring.data.redis.timeout=2000ms
+spring.data.redis.connect-timeout=2000ms
 
 # Flyway Configuration
 spring.flyway.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
@@ -38,6 +41,8 @@ spring.flyway.user=${PGUSER}
 spring.flyway.password=${PGPASSWORD}
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+spring.flyway.validate-on-migrate=false
+spring.flyway.out-of-order=true
 logging.level.org.flywaydb=DEBUG
 logging.level.com.zaxxer.hikari=DEBUG
 
