atualiza configuração do Redis para aumentar timeout e melhorar resiliência

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -32,8 +32,12 @@ spring.data.redis.host=${REDISHOST}
 spring.data.redis.port=${REDISPORT}
 spring.data.redis.password=${REDISPASSWORD}
 spring.data.redis.database=0
-spring.data.redis.timeout=2000ms
-spring.data.redis.connect-timeout=2000ms
+spring.data.redis.timeout=3000ms
+spring.data.redis.connect-timeout=5000ms
+spring.data.redis.lettuce.pool.max-active=8
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=0
+spring.data.redis.lettuce.pool.time-between-eviction-runs=60s
 
 # Flyway Configuration
 spring.flyway.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
@@ -82,9 +86,12 @@ security.require-ssl=${SECURITY_REQUIRE_SSL:false}
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=25MB
 
-# Logging Configuration
+# Logging Configuration - Debug startup
 logging.level.root=${LOGGING_LEVEL_ROOT:INFO}
 logging.level.com.ruby=${LOGGING_LEVEL_COM_RUBY:DEBUG}
+logging.level.org.springframework.context=DEBUG
+logging.level.org.springframework.beans.factory=DEBUG
+logging.level.org.springframework.boot.autoconfigure=DEBUG
 logging.level.com.ruby.rubia_server.core.adapter.impl.ZApiAdapter=DEBUG
 logging.level.com.ruby.rubia_server.core.service.MessagingService=DEBUG
 logging.level.org.springframework.security.config.annotation.authentication.configuration.InitializeUserDetailsBeanManagerConfigurer=ERROR
@@ -115,4 +122,8 @@ campaign.messaging.randomize-order=${CAMPAIGN_MESSAGING_RANDOMIZE_ORDER:true}
 
 # Spring Boot Autoconfigure (disable RabbitMQ for now)
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
+
+# Redis Configuration - Make it resilient
+spring.data.redis.ssl=false
+spring.data.redis.lettuce.shutdown-timeout=100ms
 
