remove configuração SSL e timeout de shutdown do Redis e altera host do servidor Vite para localhost

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -124,6 +124,6 @@ campaign.messaging.randomize-order=${CAMPAIGN_MESSAGING_RANDOMIZE_ORDER:true}
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
 
 # Redis Configuration - Make it resilient
-spring.data.redis.ssl=false
-spring.data.redis.lettuce.shutdown-timeout=100ms
+# spring.data.redis.ssl=false
+# spring.data.redis.lettuce.shutdown-timeout=100ms
 
