remove configuração de logging do Flyway e HikariCP

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Rubia Chat Server
+spring.flyway.enabled=false
 
 # Server Configuration
 server.port=${PORT:8080}
@@ -47,8 +48,6 @@ spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.validate-on-migrate=false
 spring.flyway.out-of-order=true
-logging.level.org.flywaydb=DEBUG
-logging.level.com.zaxxer.hikari=DEBUG
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET:mySecretKey123456789012345678901234567890}
