--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,44 +1,15 @@
-# Build stage
-FROM eclipse-temurin:21-jdk-alpine AS build
+# Use the Eclipse temurin alpine official image
+# https://hub.docker.com/_/eclipse-temurin
+FROM eclipse-temurin:21-jdk-alpine
 
+# Create and change to the app directory.
 WORKDIR /app
 
-# Copy Maven wrapper and pom.xml
-COPY mvnw .
-COPY mvnw.cmd .
-COPY .mvn .mvn
-COPY pom.xml .
+# Copy local code to the container image.
+COPY . ./
 
-# Download dependencies
-RUN ./mvnw dependency:go-offline -B
+# Build the app.
+RUN ./mvnw -DoutputFile=target/mvn-dependency-list.log -B -DskipTests clean dependency:list install
 
-# Copy source code
-COPY src src
-
-# Build the application
-RUN ./mvnw clean package -DskipTests
-
-# Production stage
-FROM eclipse-temurin:21-jre-alpine
-
-WORKDIR /app
-
-# Install curl for health checks
-RUN apk add --no-cache curl
-
-# Copy the jar file from build stage
-COPY --from=build /app/target/*.jar app.jar
-
-# Create non-root user
-RUN addgroup -g 1001 -S spring && adduser -u 1001 -S spring -G spring
-RUN chown -R spring:spring /app
-USER spring
-
-# Expose port 8081
-EXPOSE 8080
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
-    CMD curl -f http://localhost:8080/actuator/health || exit 1
-
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# Run the app by dynamically finding the JAR file in the target directory
+CMD ["sh", "-c", "java -jar target/*.jar"]
