refatora Dockerfile para expor a porta 8080 e ajusta configurações no application.properties para desabilitar o Flyway e configurar o Redis

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -11,5 +11,8 @@ COPY . ./
 # Build the app.
 RUN ./mvnw -DoutputFile=target/mvn-dependency-list.log -B -DskipTests clean dependency:list install
 
+# Expose port 8080
+EXPOSE 8080
+
 # Run the app by dynamically finding the JAR file in the target directory
 CMD ["sh", "-c", "java -jar target/*.jar"]
