--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -44,7 +44,7 @@ spring.data.redis.lettuce.pool.time-between-eviction-runs=60s
 spring.flyway.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.flyway.user=${PGUSER}
 spring.flyway.password=${PGPASSWORD}
-spring.flyway.enabled=true
+# spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.validate-on-migrate=false
 spring.flyway.out-of-order=true
@@ -75,8 +75,8 @@ zapi.media.allowed-types=image/jpeg,image/png,application/pdf,video/mp4,audio/mp
 z-api.base-url=https://api.z-api.io
 z-api.connection-monitor.enabled=true
 z-api.connection-monitor.check-interval=120000
-z-api.webhook.base-url=${Z_API_WEBHOOK_BASE_URL:https://your-domain.com}
-zapi.webhook.token=${ZAPI_WEBHOOK_TOKEN:token}
+z-api.webhook.base-url=https://your-domain.com
+zapi.webhook.token=token
 
 # Security Configuration
 security.require-ssl=${SECURITY_REQUIRE_SSL:false}
@@ -118,6 +118,6 @@ campaign.messaging.randomize-order=${CAMPAIGN_MESSAGING_RANDOMIZE_ORDER:true}
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
 
 # Redis Configuration - Make it resilient
-# spring.data.redis.ssl=false
+spring.data.redis.ssl=false
 # spring.data.redis.lettuce.shutdown-timeout=100ms
 
