--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -118,6 +118,7 @@ campaign.messaging.randomize-order=${CAMPAIGN_MESSAGING_RANDOMIZE_ORDER:true}
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
 
 # Redis Configuration - Make it resilient
-spring.data.redis.ssl=false
+# spring.data.redis.ssl=false
+spring.data.redis.ssl.enabled=false
 # spring.data.redis.lettuce.shutdown-timeout=100ms
 
