--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.datasource.hikari.max-lifetime=600000
 spring.datasource.hikari.leak-detection-threshold=60000
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
