ajusta a configuração de logging para nível INFO no application.properties

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -86,8 +86,6 @@ spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=25MB
 
 # Logging Configuration - Debug startup
-logging.level.root=${LOGGING_LEVEL_ROOT:INFO}
-logging.level.com.ruby=${LOGGING_LEVEL_COM_RUBY:DEBUG}
 logging.level.org.springframework.security.config.annotation.authentication.configuration.InitializeUserDetailsBeanManagerConfigurer=ERROR
 
 # Actuator Configuration  
@@ -96,6 +94,11 @@ management.endpoint.health.show-details=always
 management.endpoints.enabled-by-default=true
 management.endpoint.health.enabled=true
 management.endpoint.info.enabled=true
+
+logging.level.root=INFO
+logging.level.com.ruby=INFO
+logging.level.org.hibernate=INFO
+
 
 # Message Template Configuration
 app.message-template.revision.fail-on-error=${MESSAGE_TEMPLATE_REVISION_FAIL_ON_ERROR:true}
