ajusta a configuração de logging para incluir nível INFO para Spring e Hibernate

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -86,7 +86,7 @@ spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=25MB
 
 # Logging Configuration - Debug startup
-logging.level.org.springframework.security.config.annotation.authentication.configuration.InitializeUserDetailsBeanManagerConfigurer=ERROR
+# logging.level.org.springframework.security.config.annotation.authentication.configuration.InitializeUserDetailsBeanManagerConfigurer=ERROR
 
 # Actuator Configuration  
 management.endpoints.web.exposure.include=*
@@ -97,7 +97,9 @@ management.endpoint.info.enabled=true
 
 logging.level.root=INFO
 logging.level.com.ruby=INFO
+logging.level.org.springframework=INFO
 logging.level.org.hibernate=INFO
+spring.jpa.show-sql=false
 
 
 # Message Template Configuration
