refatora Dockerfile para utilizar a imagem jdk-slim em vez de jdk-alpine

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,5 +1,5 @@
 # --- Stage 1: Build ---
-FROM eclipse-temurin:21-jdk-alpine AS build
+FROM eclipse-temurin:21-jdk-slim AS build
 
 WORKDIR /app
 
@@ -14,7 +14,7 @@ COPY src src
 RUN ./mvnw clean package -DskipTests
 
 # --- Stage 2: Run ---
-FROM eclipse-temurin:21-jre-alpine
+FROM eclipse-temurin:21-jdk-slim
 
 WORKDIR /app
 
