Implementa controle de respostas automáticas da IA e limites de mensagens por conversa

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Rubia Chat Server
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 
 # Server Configuration
 server.port=${PORT:8080}
@@ -9,7 +9,7 @@ server.tomcat.connection-timeout=20000
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:rubia}
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -29,9 +29,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 
-spring.data.redis.host=${REDISHOST}
-spring.data.redis.port=${REDISPORT}
-spring.data.redis.password=${REDISPASSWORD}
+spring.data.redis.host=${REDISHOST:localhost}
+spring.data.redis.port=${REDISPORT:6379}
+spring.data.redis.password=${REDISPASSWORD:}
 spring.data.redis.database=0
 spring.data.redis.timeout=3000ms
 spring.data.redis.connect-timeout=5000ms
@@ -41,10 +41,9 @@ spring.data.redis.lettuce.pool.min-idle=0
 spring.data.redis.lettuce.pool.time-between-eviction-runs=60s
 
 # Flyway Configuration
-spring.flyway.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-spring.flyway.user=${PGUSER}
-spring.flyway.password=${PGPASSWORD}
-# spring.flyway.enabled=true
+spring.flyway.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:rubia}
+spring.flyway.user=${PGUSER:postgres}
+spring.flyway.password=${PGPASSWORD:postgres}
 spring.flyway.locations=classpath:db/migration
 spring.flyway.validate-on-migrate=false
 spring.flyway.out-of-order=true
